--- a/index.html
+++ b/index.html
@@ -20,25 +20,25 @@
     </nav>
   </header>
   <section class="home">
-    <div class="home-contact">     
-      <h3>Hello it's me</h3>
+    <div class="home-contact">
+      <h3>Hello,it's me</h3>
       <h1>Bristy Roy</h1>
-      <h3>And i am a <span>Frontend Developer</span></h3>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatem similique,
-         quas velit iure ad tenetur, 
-        harum voluptates laudantium possimus impedit repudiandae, nam dignissimos culpa ab!</p>
-        <br>
-        <a href="#" class="btn">Downlode CV</a>
+      <h3>and i am a <span>Frontend Developer</span></h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, 
+        cum sit. Earum fuga commodi, eius, numquam inventore ab reiciendis modi 
+        tempore dicta tempora ad repellat, sint enim nisi dignissimos facere.</p>
+        <a href="#" class="btn"><i class="fa-solid fa-down-to-bracket"></i>Downlode CV</a><br>
+        <div class="logo-font">
+        <a href="https://www.facebook.com/messages/read/?fbid=100026923551871#fua" class="logo-font"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#" class="logo-font"><i class="fa-brands fa-youtube"></i></i></a>
+        <a href="#" class="logo-font"><i class="fa-brands fa-twitter"></i></i></a>
+        <a href="#" class="logo-font"><i class="fa-brands fa-instagram"></i></i></a>
+        </div>
+        
     </div>
-  <img src="img.png"alt="">
+    <img src="img.png" alt="">
   
   </section>
-  <div class="ig">
-    <a href="https://www.facebook.com/messages/read/?fbid=100026923551871#fua" class="fb"><i class="fa-brands fa-facebook"></i></a>
-    <a href="#" class="fb "><i class="fa-brands fa-youtube"></i></i></a>
-    <a href="#" class="fb"><i class="fa-brands fa-twitter"></i></i></a>
-    <a href="#" class="fb"><i class="fa-brands fa-instagram"></i></i></a>
-  </div>
-    
+   
 </body>
 </html>
