--- a/skill.html
+++ b/skill.html
@@ -15,9 +15,9 @@
         <nav class="navber">
           <a href="index.html"><i class="fa-solid fa-house"></i>Home</a>
           <a href="about.html">About</a>
-          <a href="contact.html">Contact </a>
           <a href="skill.html">My skill</a>
-          <a href="edu.html"><i class="fa-solid fa-icons"></i>Education</a>
+          <a href="edu.html">Education</a>
+          <a href="contact.html">Contact </a>
         </nav>
       </header>
       <section class="skills"id="skills">
