--- a/contact.html
+++ b/contact.html
@@ -14,13 +14,13 @@
         <nav class="navber">
           <a href="index.html"><i class="fa-solid fa-house"></i>Home</a>
           <a href="about.html">About</a>
-          <a href="contact.html">Contact </a>
           <a href="skill.html">My skill</a>
           <a href="edu.html">Education</a>
+          <a href="contact.html">Contact </a>
         </nav>
       </header>
       <section class="contact"id="contact">
-        <h1>Contact Me</h1>
+        <h1 class="cnt-1">Contact Me</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, unde!</p>
         <div class="contact-box">
         <h2>Send Message</h2>
